# uk-economic-change

./: .gitignore  Makefile  README.md  project.yaml  pyproject.toml
.github/workflows/: static.yml
data/: claims_register.csv  indicator_register.csv
data/raw/: nhs_waiting_list.csv
docs/: findings-summary.md  full-report.md  future-plan.md  implementation-plan.md  index-update-prompt.md  index.md  methodology-note.md  phase-1-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase5-housing-public-service-assessment.md  poc-summary.md  project-history.md
notebooks/: 01-national-indicators.py  02-regional-productivity.py
outputs/tables/: claims_evidence_matrix.csv  combined_comparison.csv  growth_rate_comparison.csv  international_gdp_per_capita_comparison.csv  national_comparison.csv  public_service_extension.csv  regional_productivity_comparison.csv
src/: build_outputs.py  clean_indicators.py  fetch_ons.py  process_indicators.py  qa_checks.py
