[project]
name = "uk-economic-change-poc"
version = "0.1.0"
description = "Proof of concept for an ONS-first UK economic change comparison framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "requests>=2.31",
  "xlrd>=2.0.2",
]


[tool.uv]
package = false

[tool.ruff]
line-length = 100
